# Algebraeon

./: .gitignore  CHANGELOG  Cargo.toml  README.md  katex-header.html  open_docs.py  parse_poly.py  shell.nix  typos.toml
algebraeon/: Cargo.toml
algebraeon/benches/: library_benchmark.rs
algebraeon/src/: lib.rs
combinatorics/: Cargo.toml
combinatorics/src/: lib.rs  modular_permutations.rs  outs6.rs  pentads.rs  stirling_numbers.rs
combinatorics/src/linear_codes/: binary_golay_code.rs  hexacode.rs  mod.rs  ternary_golay_code.rs
combinatorics/src/outs6/: duads.rs  mod.rs  pentads.rs  synthemes.rs
drawing/: Cargo.toml
drawing/src/: canvas.rs  canvas2d.rs  colour.rs  example_canvas_1.rs  lib.rs  simplexes.rs  wgpu_state.rs  window.rs
drawing/src/canvas/: canvas2d.rs  mod.rs
drawing/src/canvas2d/: mod.rs  plottable.rs  shader.wgsl
drawing/src/canvas_old/: canvas2d.rs  mod.rs  simplexes.rs
drawing/src/example_renderer_1/: mod.rs  shader.wgsl
drawing/src/example_renderer_2/: mod.rs
drawing/src/old/: canvas.rs  canvas2d.rs  mod.rs
examples/: Cargo.toml  build.rs
examples/benches/: library_benchmark.rs  my_benchmark.rs
examples/src/: lib.rs
geometry/: Cargo.toml
geometry/src/: affine_subspace.rs  ambient_space.rs  boolean_operations.rs  convex_hull.rs  coordinates.rs  lib.rs  minkowski_sum.rs  mod.rs  oriented_simplex.rs  partial_simplicial_complex.rs  simplex.rs  simplex_collection.rs  simplex_overlap.rs  simplicial_complex.rs  simplicial_disjoint_union.rs  vector.rs
geometry/src/geometry/: affine_subspace.rs  coordinates.rs  linear_space.rs  mod.rs
geometry/src/geometry_old/: affine_coordinate_system.rs  mod.rs  oriented_simplex.rs  shape.rs  simplex.rs  vector.rs
geometry/src/parse/: ast.rs  mod.rs  shape_grammar.lalrpop
geometry/src/simplexes/: boolean_operations.rs  boolean_opperations.rs  convex_hull.rs  mod.rs  partial_simplicial_complex.rs  simplex.rs  simplex_collection.rs  simplicial_complex.rs  simplicial_disjoint_union.rs
graphs/: Cargo.toml
graphs/src/: examples.rs  lib.rs  structure.rs
graphs/src/examples/: complete_directed.rs  complete_undirected.rs  cycle.rs  mod.rs  wheel.rs
groups/: Cargo.toml
groups/src/: group.rs  lib.rs  permutation.rs  structure.rs
groups/src/composition_table/: generating_set.rs  group.rs  homomorphism.rs  iso_rep.rs  mod.rs  normal_subgroup.rs  partition.rs  subgroup.rs  subset.rs  todd_coxeter.rs
groups/src/examples/: c2.rs  symmetric.rs
groups/src/free_group/: mod.rs  todd_coxeter.rs
macros/: Cargo.toml
macros/src/: lib.rs
nzq/: Cargo.toml  log.txt
nzq/src/: lib.rs
nzq/src/combinatorics/: mod.rs  stirling_numbers.rs
nzq/src/integer/: mod.rs
nzq/src/natural/: functions.rs  mod.rs  modulo.rs
nzq/src/random/: mod.rs
nzq/src/rational/: mod.rs
nzq/src/traits/: mod.rs
rings/: Cargo.toml  build.rs  katex-header.html
rings/benches/: polynomial_real_root_count.rs  polynomial_roots.rs  sampling.rs
rings/src/: elements.rs  lib.rs  quotient_morphism.rs  rational.rs  structure.rs  valuation.rs
rings/src/algebraic/: embedded_anf.rs  number_field.rs
rings/src/algebraic_number_field/: embedded_anf.rs  ideal.rs  integer_lattice_ring_of_integers.rs  isomorphism_quadratic_with_polynomial_quotient.rs  mod.rs  number_field.rs  number_field_traits.rs  polynomial.rs  polynomial_quotient_number_field.rs  quadratic_number_field.rs  quadratic_ring_of_integers.rs  ring_of_integer_extensions.rs  ring_of_integers.rs  structure.rs
rings/src/algebraic_number_fields/: embedded_anf.rs  polynomial.rs  ring_of_integer_extensions.rs
rings/src/approximation/: mod.rs  rational_interval.rs
rings/src/approximations/: complex_boxes.rs  mod.rs  open_box.rs  open_interval.rs  real_intervals.rs
rings/src/continued_fraction/: eulers_constant.rs  mod.rs
rings/src/coontinued_fractions/: mod.rs
rings/src/finite_fields/: conway_finite_fields.rs  conway_polynomials.rs  extension.rs  mod.rs  modulo.rs  polynomial.rs  quaternary_field.rs
rings/src/integer/: berlekamp_zassenhaus.rs  ideal.rs  mod.rs  modulo.rs  polynomial.rs  zimmermann_polys.rs
rings/src/isolated_algebraic/: bisection_gen.rs  mod.rs  poly_tools.rs
rings/src/isolated_algebraics/: poly_tools.rs
rings/src/linear/: finite_inner_product_space.rs  finite_rank_free_modules.rs  finitely_free_affine.rs  finitely_free_coset.rs  finitely_free_module.rs  finitely_free_modules.rs  finitely_free_submodule.rs  finitely_free_submodule_coset.rs  free_modules.rs  hashable_set_finitely_free_module.rs  hashable_set_free_module.rs  linear_subspace.rs  matrix.rs  mod.rs  modules.rs  ordered_set_free_module.rs  set_finitely_free_module.rs  set_free_module.rs  submodule.rs  subspace.rs  unstructured_set_free_module.rs
rings/src/localization/: local_ring.rs  localization.rs  mod.rs
rings/src/matrix/: general_linear_group.rs  gram_schmidt.rs  hermite_reduction.rs  inner_product.rs  jordan_normal_form.rs  lll_reduction.rs  matrix.rs  mod.rs  polynomial.rs  primitive.rs  row_operations.rs  smith_normal_form.rs  symmetric_matrix.rs
rings/src/module/: finitely_free_coset.rs  finitely_free_module.rs  finitely_free_submodule.rs  ordered_set_free_module.rs
rings/src/natural/: counting.rs  functions.rs  mod.rs
rings/src/num_theory/: berlekamp_zassenhaus.rs  functions.rs  integer_ideal.rs  integer_polynomial.rs  integer_structure.rs  mod.rs  modulo.rs  montgomery_small_modulo.rs  natural_structure.rs  quadratic_symbols.rs  zimmermann_polys.rs
rings/src/number/: mod.rs  modulo.rs  natural.rs  padic.rs  quaternary_field.rs  rational.rs
rings/src/parsing/: ast.rs  mod.rs  polynomial.rs  polynomial_grammar.lalrpop  polynomial_tests.rs
rings/src/polynomial/: factoring.rs  groebner.rs  hensel_lifting.rs  hensel_lifting_btree.rs  hensel_lifting_linalg.rs  (+11 more)
sets/: Cargo.toml  expanded.rs
sets/src/: approximations.rs  combinations.rs  lib.rs  partition.rs  structure.rs  subset.rs
structures/: Cargo.toml
structures/src/: groups.rs  lib.rs  product.rs
topology/: Cargo.toml
topology/src/: complex_plane.rs  lib.rs  open_interval.rs  real_line.rs
(+494 files in other folders)
