[workspace]
resolver = "2"
members = [
    "sets",
    "nzq",
    "groups",
    "rings",
    "geometry",
    "drawing",
    "combinatorics",
    "examples", 
    "algebraeon", "canonical_structure_derive",
]

# https://github.com/pksunkara/cargo-workspaces
# To publish
# Update CHANGELOG
# Bump versions
#   cargo ws version --no-individual-tags --exact --force *
# Check all ok:
#   cargo ws publish --no-individual-tags --from-git --dry-run
# Publish
#   cargo ws publish --no-individual-tags --from-git
