[workspace]
resolver = "2"
members = [
    "sets",
    "nzq",
    "groups",
    "rings",
    "geometry",
    "graphs",
    "drawing",
    "combinatorics",
    "examples",
    "algebraeon",
    "macros",
]

[profile.bench]
debug = true

# https://github.com/pksunkara/cargo-workspaces
# To publish
# Update CHANGELOG
# Install cargo-workspaces
#   cargo install cargo-workspaces
# Bump versions
#   cargo ws version --no-individual-tags --exact --force *
# Check all ok:
#   cargo ws publish --no-individual-tags --from-git --dry-run
# Publish
#   cargo ws publish --no-individual-tags --from-git
