[package]
name = "algebraeon"
version = "0.0.13"
edition = "2024"
license = "GPL-3.0-only"
description = "Algebraeon computational algebra library re-exports for all components"
repository = "https://github.com/pishleback/Algebraeon"
keywords = ["maths", "matrix", "polynomial", "number-theory", "factoring"]
categories = ["mathematics"]
readme = "../README.md"

[lib]
name = "algebraeon"

[dependencies]
algebraeon-sets = { version = "=0.0.13", path = "../sets", default-features = false }
algebraeon-nzq = { version = "=0.0.13", path = "../nzq", default-features = false }
algebraeon-groups = { version = "=0.0.13", path = "../groups", default-features = false }
algebraeon-rings = { version = "=0.0.13", path = "../rings", default-features = false }
algebraeon-geometry = { version = "=0.0.13", path = "../geometry", default-features = false }
