[package]
name = "algebraeon"
version = "0.0.15"
edition = "2024"
license = "GPL-3.0-only"
description = "Algebraeon computational algebra library re-exports for all components"
repository = "https://github.com/pishleback/Algebraeon"
keywords = ["maths", "matrix", "polynomial", "number-theory", "factoring"]
categories = ["mathematics"]
readme = "../README.md"

[lib]
name = "algebraeon"

[dependencies]
algebraeon-sets = { version = "=0.0.14", path = "../sets", default-features = false }
algebraeon-nzq = { version = "=0.0.15", path = "../nzq", default-features = false }
algebraeon-groups = { version = "=0.0.15", path = "../groups", default-features = false }
algebraeon-rings = { version = "=0.0.15", path = "../rings", default-features = false }
algebraeon-geometry = { version = "=0.0.15", path = "../geometry", default-features = false }
algebraeon-drawing = { version = "=0.0.15", path = "../drawing", default-features = false }

# Benchmarking stuff
[dev-dependencies]
gungraun = "0.17.0"

[[bench]]
name = "library_benchmark"
harness = false
