[package]
name = "algebraeon-combinatorics"
# version = "0.0.0"
edition = "2021"

[lib]
name = "algebraeon_combinatorics"

[dependencies]
derivative = "2.2.0"
itertools = "0.11.0"
malachite-base = "0.3.2"
malachite-nz = "0.3.2"
malachite-q = "0.3.2"
static_assertions = "1.1.0"
algebraeon-sets = { version = "0.0.6", path = "../sets" }
algebraeon-groups = { version = "0.0.6", path = "../groups" }
algebraeon-rings = { version = "0.0.7", path = "../rings" }
