[package]
name = "algebraeon-combinatorics"
# version = "0.0.0"
edition = "2024"

[lib]
name = "algebraeon_combinatorics"

[dependencies]
derivative = "2.2.0"
itertools = "0.11.0"
malachite-base = "0.4.16"
static_assertions = "1.1.0"
algebraeon-sets = { version = "0.1.2", path = "../sets" }
algebraeon-groups = { version = "0.1.3", path = "../groups" }
algebraeon-rings = { version = "0.1.3", path = "../rings" }
