[package]
name = "algebraeon-combinatorics"
# version = "0.0.0"
edition = "2024"

[lib]
name = "algebraeon_combinatorics"

[dependencies]
derivative = "2.2.0"
itertools = "0.11.0"
malachite-base = "0.4.16"
static_assertions = "1.1.0"
algebraeon-sets = { version = "=0.0.16", path = "../sets", default-features = false }
algebraeon-groups = { version = "=0.0.16", path = "../groups", default-features = false }
algebraeon-rings = { version = "=0.0.16", path = "../rings", default-features = false }
