[package]
name = "algebraeon-drawing"
version = "0.0.14"
edition = "2024"
license = "GPL-3.0-only"
description = "For drawing algebraeon things."

[lib]
name = "algebraeon_drawing"

[dependencies]
algebraeon-sets = { version = "=0.0.14", path = "../sets", default-features = false }
algebraeon-rings = { version = "=0.0.14", path = "../rings", default-features = false }
algebraeon-nzq = { version = "=0.0.14", path = "../nzq", default-features = false }
algebraeon-geometry = { version = "=0.0.14", path = "../geometry", default-features = false }
bytemuck = "1.22.0"
log = "0.4.27"
pollster = "0.4.0"
simplelog = "0.12.2"
wgpu = "25.0.0"
winit = "0.30.9"
rand = "0.9.2"
