[package]
name = "algebraeon-examples"
# version = "0.0.2"
edition = "2021"
license = "GPL-3.0-only"
description = "Algebraeon example usage."
repository = "https://github.com/pishleback/Algebraeon"
keywords = ["maths"]
categories = ["mathematics"]
readme = "../README.md"

[lib]
name = "algebraeon_examples"

[dependencies]
algebraeon-sets = { version = "0.1.0", path = "../sets" }
algebraeon-groups = { version = "0.1.0", path = "../groups" }
algebraeon-rings = { version = "0.1.0", path = "../rings" }
algebraeon-nzq = { version = "0.1.0", path = "../nzq" }

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
