[package]
name = "algebraeon-examples"
# version = "0.0.2"
edition = "2024"
license = "GPL-3.0-only"
description = "Algebraeon example usage."
repository = "https://github.com/pishleback/Algebraeon"
keywords = ["maths"]
categories = ["mathematics"]
readme = "../README.md"

[lib]
name = "algebraeon_examples"

[dependencies]
algebraeon = { version = "0.1.5", path = "../algebraeon" }

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
