[package]
name = "algebraeon-geometry"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Algorithms for working with geometric shapes"
repository = "https://github.com/pishleback/Algebraeon"
keywords = ["maths", "geometry", "simpelx"]
categories = ["mathematics"]
readme = "../README.md"

[lib]
name = "algebraeon_geometry"

[dependencies]
itertools="0.11.0"
algebraeon-sets = { version = "0.1.0", path = "../sets" }
algebraeon-rings = { version = "0.1.0", path = "../rings" }
algebraeon-nzq = { version = "0.1.0", path = "../nzq" }
