[package]
name = "algebraeon-geometry"
version = "0.0.13"
edition = "2024"
license = "GPL-3.0-only"
description = "Algorithms for working with geometric shapes"
repository = "https://github.com/pishleback/Algebraeon"
keywords = ["maths", "geometry", "simpelx"]
categories = ["mathematics"]
readme = "../README.md"

[lib]
name = "algebraeon_geometry"

[dependencies]
itertools = "0.11.0"
algebraeon-sets = { version = "=0.0.13", path = "../sets", default-features = false }
algebraeon-rings = { version = "=0.0.13", path = "../rings", default-features = false }
algebraeon-nzq = { version = "=0.0.13", path = "../nzq", default-features = false }
lalrpop-util = { version = "0.22.1", features = ["lexer"] }
rayon = "1.11.0"

[build-dependencies]
lalrpop = "0.22.1"
