[package]
name = "algebraeon-groups"
version = "0.0.13"
edition = "2024"
license = "GPL-3.0-only"
description = "Algorithms in group theory."
repository = "https://github.com/pishleback/Algebraeon"
keywords = ["maths", "groups", "permutations"]
categories = ["mathematics"]
readme = "../README.md"

[lib]
name = "algebraeon_groups"

[dependencies]
algebraeon-nzq = { version = "=0.0.13", path = "../nzq", default-features = false }
algebraeon-sets = { version = "=0.0.13", path = "../sets", default-features = false }
itertools = "0.14.0"
rayon = "1.7.0"
