[package]
name = "algebraeon-groups"
version = "0.0.17"
edition = "2024"
license = "GPL-3.0-only"
description = "Algorithms in group theory."
repository = "https://github.com/pishleback/Algebraeon"
keywords = ["maths", "groups", "permutations"]
categories = ["mathematics"]
readme = "../README.md"

[lib]
name = "algebraeon_groups"

[dependencies]
algebraeon-structures = { version = "=0.0.17", path = "../structures", default-features = false }
algebraeon-macros = { version = "=0.0.17", path = "../macros", default-features = false }
algebraeon-sets = { version = "=0.0.17", path = "../sets", default-features = false }
itertools = "0.15.0"
rayon = "1.11.0"
