[package]
name = "algebraeon-macros"
version = "0.0.11"
edition = "2024"
license = "GPL-3.0-only"
description = "Macros for Algebraeon."
repository = "https://github.com/pishleback/Algebraeon"
keywords = ["maths", "macro"]
categories = ["mathematics"]
readme = "../README.md"

[lib]
name = "algebraeon_macros"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = "2.0.100"
