[package]
name = "algebraeon-nzq"
version = "0.1.2"
edition = "2024"
license = "GPL-3.0-only"
description = "natural numbers, integers and rationals for algebraeon"
repository = "https://github.com/pishleback/Algebraeon"
keywords = ["maths", "naturals", "integers", "rationals"]
categories = ["mathematics"]
readme = "../README.md"

[lib]
name = "algebraeon_nzq"

[dependencies]
algebraeon-sets = { version = "0.1.0", path = "../sets" }
malachite-base = "0.5.1"
malachite-nz = "0.5.1"
malachite-q = "0.5.1"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
