[package]
name = "algebraeon-nzq"
version = "0.0.12"
edition = "2024"
license = "GPL-3.0-only"
description = "natural numbers, integers and rationals for algebraeon"
repository = "https://github.com/pishleback/Algebraeon"
keywords = ["maths", "naturals", "integers", "rationals"]
categories = ["mathematics"]
readme = "../README.md"

[lib]
name = "algebraeon_nzq"

[dependencies]
algebraeon-sets = { version = "=0.0.12", path = "../sets", default-features = false }
malachite-base = "0.6.0"
malachite-nz = { version = "0.6.0", features = ["random"] }
malachite-q = "0.6.0"


[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
