[package]
name = "algebraeon-rings"
version = "0.0.12"
edition = "2024"
license = "GPL-3.0-only"
description = "Algorithms in linear algebra, polynomials, and number theory."
repository = "https://github.com/pishleback/Algebraeon"
keywords = ["maths", "matrix", "polynomial", "number-theory", "factoring"]
categories = ["mathematics"]
readme = "../README.md"

[lib]
name = "algebraeon_rings"

[dependencies]
algebraeon-sets = { version = "=0.0.12", path = "../sets", default-features = false }
algebraeon-nzq = { version = "=0.0.12", path = "../nzq", default-features = false }
algebraeon-groups = { version = "=0.0.12", path = "../groups", default-features = false }
rand = "0.8.5"
rayon = "1.7.0"
itertools = "0.11.0"
reqwest = { version = "0.12.15", features = ["blocking"], optional = true }

[build-dependencies]
reqwest = { version = "0.12.15", features = ["blocking"] }

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]