[package]
name = "algebraeon-rings"
version = "0.0.15"
edition = "2024"
license = "GPL-3.0-only"
description = "Algorithms in linear algebra, polynomials, and number theory."
repository = "https://github.com/pishleback/Algebraeon"
keywords = ["maths", "matrix", "polynomial", "number-theory", "factoring"]
categories = ["mathematics"]
readme = "../README.md"

[lib]
name = "algebraeon_rings"

[dependencies]
algebraeon-sets = { version = "=0.0.14", path = "../sets", default-features = false }
algebraeon-nzq = { version = "=0.0.15", path = "../nzq", default-features = false }
algebraeon-groups = { version = "=0.0.15", path = "../groups", default-features = false }
algebraeon-macros = { version = "=0.0.13", path = "../macros", default-features = false }
rand = "0.9.1"
rayon = "1.7.0"
itertools = "0.14.0"
lalrpop-util = { version = "0.22.1", features = ["lexer"] }
impls = "1.0.3"
static_assertions = "1.1.0"

[build-dependencies]
lalrpop = "0.22.1"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
