[package]
name = "algebraeon-sets"
version = "0.0.10"
edition = "2024"
license = "GPL-3.0-only"
description = "Algorithms in combinatorics."
repository = "https://github.com/pishleback/Algebraeon"
keywords = ["maths", "combinatorics"]
categories = ["mathematics"]
readme = "../README.md"

[lib]
name = "algebraeon_sets"

[dependencies]
indexmap = "2.8.0"
itertools = "0.14.0"
malachite-base = "0.5.1"
