[package]
name = "algebraeon-sets"
version = "0.0.16"
edition = "2024"
license = "GPL-3.0-only"
description = "Algorithms in combinatorics."
repository = "https://github.com/pishleback/Algebraeon"
keywords = ["maths", "combinatorics"]
categories = ["mathematics"]
readme = "../README.md"

[lib]
name = "algebraeon_sets"

[dependencies]
algebraeon-macros = { version = "=0.0.16", path = "../macros", default-features = false }
indexmap = "2.8.0"
itertools = "0.14.0"
paste = "1.0.15"
rand = "0.10.0"
